# JustD3D12Compute

./: .editorconfig  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  main.cpp
examples/shaders/: TemporaryTest.hlsl
include/jd3d12/: config.hpp  core.hpp  jd3d12.hpp  types.hpp  utils.hpp
src/: core.cpp  internal_utils.cpp  internal_utils.hpp  jd3d12.cpp  logger.cpp  logger.hpp  precompiled_header.cpp  precompiled_header.hpp  types.cpp  utils.cpp
tests/: CMakeLists.txt  test_main.cpp
tests/shaders/: CompileShaders.bat  CopySquaredTyped.dxil  CopySquaredTyped.hlsl  Test.hlsl  Test_ByteAddress.dxil  Test_Structured.dxil  Test_Typed.dxil  constant_buffer.dxil  constant_buffer.hlsl  include_test.hlsl  include_test_header.hlsl
